fix alignment issue

--- a/themes/pure/assets/css/style.css
+++ b/themes/pure/assets/css/style.css
@@ -9156,7 +9156,7 @@ body.okayNav-loaded {
     width: 24px;
     height: 24px;
     margin-top: 3px;
-    margin-left: 15px;
+    margin-left: 0.5em;
   }
 }
 
